# SIMNet

./: .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: ds.yml  publish.yml
compiler/ds/: build.gradle  download.py  download.sh  settings.gradle
compiler/ds/gradle/wrapper/: gradle-wrapper.properties
compiler/ds/src/main/java/org/example/: Replace.java
simnet/: __init__.py  errors.py  version.py
simnet/client/: base.py  cookies.py  genshin.py  genshin.pyi  headers.py  routes.py  starrail.py  starrail.pyi  zzz.py
simnet/client/account/: auth.py
simnet/client/chronicle/: base.py  genshin.py  starrail.py
simnet/client/components/: auth.py  daily.py  lab.py  transaction.py  verify.py
simnet/client/components/auth_client/: __init__.py  app.py  auth_ticket.py  cookie_token.py  game.py  game_token.py  login_ticket.py  ltoken.py  stoken.py
simnet/client/components/calculator/: genshin.py  starrail.py
simnet/client/components/chronicle/: base.py  genshin.py  starrail.py  zzz.py
simnet/client/components/cloud_game/: base.py
simnet/client/components/diary/: base.py  genshin.py  starrail.py  zzz.py
simnet/client/components/event/: base.py
simnet/client/components/micreator/: base.py
simnet/client/components/self_help/: base.py  starrail.py  zzz.py
simnet/client/components/wish/: base.py  genshin.py  starrail.py  zzz.py
simnet/client/wish/: base.py  genshin.py  starrail.py
simnet/models/: base.py  diary.py
simnet/models/auth/: cookie.py
simnet/models/cloud_game/: base.py
simnet/models/genshin/: calculator.py  character.py  diary.py  transaction.py  wish.py
simnet/models/genshin/chronicle/: abyss.py  achievement.py  act_calendar.py  character_detail.py  characters.py  hard_challenge.py  img_theater.py  notes.py  stats.py
simnet/models/lab/: accompany.py  announcement.py  daily.py  mi_creator.py  record.py
simnet/models/starrail/: calculator.py  character.py  diary.py  self_help.py  wish.py
simnet/models/starrail/chronicle/: achievement.py  act_calendar.py  activity.py  base.py  challenge.py  challenge_boss.py  challenge_peak.py  challenge_story.py  characters.py  museum.py  notes.py  resident.py  rogue.py  rogue_tourn.py  stats.py
simnet/models/zzz/: calculator.py  character.py  diary.py  self_help.py  wish.py
simnet/models/zzz/chronicle/: abyss_abstract.py  abysss2_abstract.py  challenge.py  challenge_mem.py  gacha_detail.py  hadal.py  holo_boss_detail.py  notes.py  stats.py
simnet/utils/: auth.py  constants.py  cookies.py  ds.py  enum_.py  enums.py  hex.py  lang.py  paginator.py  player.py  types.py
tests/: .env.example  conftest.py  test_auth_client.py  test_base_chronicle_client.py  test_base_client.py  test_genshin.py  test_genshin_battle_chronicle_client.py  test_genshin_calculator_client.py  test_genshin_cloud_game_client.py  test_genshin_diary_client.py  test_genshin_mi_creator.py  test_lab_client.py  test_setup.py  test_starrail.py  test_starrail_battle_chronicle_client.py  test_starrail_calculator_client.py  test_starrail_cloud_game_client.py  test_starrail_diary_client.py  test_zzz.py  test_zzz_battle_chronicle_client.py  test_zzz_cloud_game_client.py  test_zzz_diary_client.py
