[tool.poetry]
name = "SIMNet"
version = "0.1.21"
description = "Modern API wrapper for Genshin Impact & Honkai: Star Rail built on asyncio and pydantic."
authors = ["PaiGramTeam"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"
pydantic = "<2.0.0,>=1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
python-dotenv = "^1.0.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']